# SandGame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
include/SDL2_ttf.framework/: SDL2_ttf.framework
src/utils/: colors.cpp  colors.h  common.cpp  common.h  defs.h  draw.cpp  drawHelperFunctions.cpp  drawHelperFunctions.h  init.cpp  init.h  input.cpp  structs.h
src/utils/gameObjects/: clickSquare.cpp  clickSquare.h  gameObjects.h  grid.cpp  sand.cpp
test/: CMakeLists.txt  test.cpp
